update log, cache warmup